--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ jupyter-core==4.7.1
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 nltk==3.5
-pandas==1.2.3
+# pandas==1.2.3
 parso==0.8.1
 pickle-mixin==1.0.2
 pickleshare==0.7.5
@@ -29,7 +29,7 @@ pyzmq==22.0.3
 regex==2021.3.17
 scikit-learn==0.24.1
 scipy==1.6.2
-seaborn==0.11.1
+# seaborn==0.11.1
 six==1.15.0
 threadpoolctl==2.1.0
 tornado==6.1
