--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ Pygments==2.8.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
-pywin32==300
+# pywin32==300
 pyzmq==22.0.3
 regex==2021.3.17
 scikit-learn==0.24.1
