--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ pytz==2021.1
 pyzmq==22.0.3
 regex==2021.3.17
 scikit-learn==0.24.1
-scipy==1.6.2
+# scipy==1.6.2
 # seaborn==0.11.1
 six==1.15.0
 threadpoolctl==2.1.0
