--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,6 @@ six==1.15.0
 threadpoolctl==2.1.0
 tornado==6.1
 tqdm==4.59.0
-traitlets==5.0.5
+# traitlets==5.0.5
 wcwidth==0.2.5
 Werkzeug==1.0.1
