--- a/requirements.txt
+++ b/requirements.txt
@@ -26,9 +26,12 @@ Pygments==2.8.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
+psycopg2-binary==2.8.6
 # pywin32==300
 pyzmq==22.0.3
 regex==2021.3.17
+SQLAlchemy==1.4.3
+greenlet==1.0.0
 scikit-learn==0.24.1
 scipy>=0.15.1
 seaborn>=0.5
